@@ -36,12 +36,12 @@
   
   bool
   ctype<char>::
-  is(mask __m, char __c) const throw()
+  is(mask __m, char __c) const 
   { return __OBJ_DATA(__lc_ctype)->mask[__c] & __m; }
 
   const char*
   ctype<char>::
-  is(const char* __low, const char* __high, mask* __vec) const throw()
+  is(const char* __low, const char* __high, mask* __vec) const 
   {
     const int __bitmasksize = sizeof(mask) * 8;
     for (;__low < __high; ++__vec, ++__low)
@@ -57,7 +57,7 @@
 
   const char*
   ctype<char>::
-  scan_is(mask __m, const char* __low, const char* __high) const throw()
+  scan_is(mask __m, const char* __low, const char* __high) const 
   {
     while (__low < __high && !this->is(__m, *__low))
       ++__low;
@@ -66,7 +66,7 @@
 
   const char*
   ctype<char>::
-  scan_not(mask __m, const char* __low, const char* __high) const throw()
+  scan_not(mask __m, const char* __low, const char* __high) const 
   {
     while (__low < __high && this->is(__m, *__low) != 0)
       ++__low;
